--- a/index.njk
+++ b/index.njk
@@ -280,7 +280,7 @@ permalink: "/"
       {% endfor %}
     </div>
     <script src="/assets/review.js" defer></script>
-    <p style="text-align:center;margin:.75rem 0 1rem">
+    <p class="reviews-cta">
       <button id="open-all-reviews" class="btn alt">Ver todas las reseñas</button>
     </p>
 
